--- a/.gitignore
+++ b/.gitignore
@@ -109,7 +109,7 @@ venv.bak/
 media/
 products/migrations/*
 !products/migrations/__init__.py
-
+!templates/
 
 # Spyder project settings
 .spyderproject
